eel-vfs-extensions: Update filename extensions

If a file had the extensions .tar.bz or .tar.xz, the function
eel_filename_get_extension_offset would identify only .bz or .xz as
an extension.

To fix this, .xz and .bz were added among the other special cases.

https://bugzilla.gnome.org/show_bug.cgi?id=771018